projects/examples/source/03.01.class.struct.cpp
#include <iostream>
#include <vector>

//  ================================================================================================

struct S { int x{}, y{}, z{ 4 }; };

struct Point { double x = 0.0, y = 0.0; };

//  ================================================================================================

[[nodiscard]] inline Point make_point(double x, double y)
{
	return (x * y > 0.0 ? Point { x, y } : Point{});
}

//  ================================================================================================

int main()
{
	[[maybe_unused]] S s1            ; // elements: { 0, 0, 4 }
	[[maybe_unused]] S s2 {         }; // elements: { 0, 0, 4 }
	[[maybe_unused]] S s3 { 1, 2    }; // elements: { 1, 2, 4 }
	[[maybe_unused]] S s4 { 1, 2, 3 }; // elements: { 1, 2, 3 }

	[[maybe_unused]] S s5 { .x = 1, .z = 3 }; // elements: { 1, 0, 3 }
	
//	[[maybe_unused]] S s6 { .y = 2, .x = 1 }; // error

//  ================================================================================================

	s1.x = 42;

	const auto ptr = &s1;

//	(*ptr).y = 42; // bad: избыточный синтаксис

	ptr->y = 42;

	auto & ref = s1.z;

	ref = 42;

//  ================================================================================================

	std::cout <<  s1.x << std::endl;
	std::cout <<  s1.y << std::endl;
	std::cout <<  s1.z << std::endl;

	std::cout << &s1   << std::endl;
	std::cout << &s1.x << std::endl;

//  ================================================================================================

	s1 = { 1, 2, 3 };

	s1 = { .x = 1, .z = 3 };

//  ================================================================================================

	[[maybe_unused]] const S s7 { 1, 2, 3 };

//	s7.x = 42; // error

//  ================================================================================================

	std::vector < Point > points { {0.0, 0.0}, {1.0, 1.0} };

	return 0;
}